Added get all user roles api
