# src/routes/system-setting-routes/getAllUserRoles.route.js
@@ -1,0 +1,28 @@
+'use strict';
+
+import { logger, buildApiResponse } from 'finance-lib';
+import controllers from '../../controllers/index.js';
+
+const log = logger('Router: get-all-user-roles');
+const settingController = controllers.settingController;
+
+// API Function
+const getAllUserRoles = async (req, res, next) => {
+  try {
+    log.info('Get all user roles request process initiated');
+    log.info('Call controller function to fetch all user roles from system');
+    const userRolesDtl = await settingController.getAllUserRoles();
+
+    log.success('User roles fetched successfully');
+    res.status(200).json(buildApiResponse(userRolesDtl));
+  } catch (err) {
+    if (err.statusCode === '500') {
+      log.error(`Error occurred while processing the request in router. Error: ${JSON.stringify(err)}`);
+    } else {
+      log.error(`Failed to complete the request. Error: ${JSON.stringify(err)}`);
+    }
+    next(err);
+  }
+};
+
+export default getAllUserRoles;
